--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -315,7 +315,7 @@ div.spacer,
 #crm-container fieldset{
     background:none;
     padding:4px 0px;
-    margin:0px;
+    margin:10px 0px;
     border:none;
     border-top: 1px solid #CFCEC3;
     
