--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2119,7 +2119,6 @@ div.grippie {
 }
 
 #crm-container .crm-button {
-    background:transparent url(../i/crm-button-dark-blue.gif) repeat-x scroll left top;
     border:medium none;
     cursor:pointer;
     display:block;
@@ -2147,26 +2146,34 @@ div.grippie {
 #crm-container a.button,
 #crm-create-new-link,
 #crm-contact-actions-link,
-#crm-container a.button:link {
-    background:transparent url(../i/crm-button-dark.gif) no-repeat scroll left top;
+#crm-container a.button:link,
+#crm-container input.form-submit {
+    text-shadow:0 1px 0 black;	
+    background:transparent url(../i/crm-button-bg.gif) repeat-x top left;
     color: #FFF;
-    display: block;
-    float: left;
     font-size:12px;
     font-weight:normal;
     margin-right: 6px;
-    padding: 0 0px 0 4px; /* sliding doors padding */
+    padding: 2px 6px;
     text-decoration: none;
     cursor: pointer;
+    border:1px solid #3e3e3e;
 }
+
+#crm-container a.button,
+#crm-create-new-link,
+#crm-contact-actions-link,
+#crm-container a.button:link{
+    display: block;
+    float: left;
+    }
 
 #crm-create-new-link span,
 #crm-contact-actions-link span,
 #crm-container a.button span {
-    background:transparent url(../i/crm-button-dark.gif) no-repeat scroll right -25px;
     display: block;
     line-height: 14px;
-    padding: 5px 12px 6px 4px;    
+    padding:2px 0px;
 } 
 
 .button .red {
@@ -2179,9 +2186,8 @@ div.grippie {
 }
 
 #crm-container .crm-button:hover,
-#crm-container a.button:hover { background-position:0px -50px; }
+#crm-container a.button:hover { background-position:0px -25px; }
 
-#crm-container a.button:hover span { background-position:right -75px; }
 
 
 /* create new XXX style (drupal block) */ 
@@ -2903,6 +2909,14 @@ del,
 }
 
 /* rounded corners - we will call dd_roundies on all this */
+#crm-container a.button,
+#crm-create-new-link,
+#crm-contact-actions-link,
+#crm-container a.button:link,
+#crm-container input.form-submit
+{-moz-border-radius: 3px; -webkit-border-radius: 3px;   -khtml-border-radius: 3px; border-radius:3px; }
+
+
 div.m ul#civicrm-menu,
 #crm-container #restmsg,
 #crm-container #help, 
