--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2158,7 +2158,8 @@ div.grippie {
     text-decoration: none;
     cursor: pointer;
     border:1px solid #3e3e3e;
-}
+    }
+    #crm-container input.form-submit { padding:0px 6px 4px;}
 
 #crm-container a.button,
 #crm-create-new-link,
