CRM-5941 - fix so dave doesn't tweak out about print case report button (now with rounded corners)

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2858,6 +2858,7 @@ del,
 }
 
 /* rounded corners - we will call dd_roundies on all this */
+#crm-container .crm-button,
 #crm-container a.button,
 #crm-create-new-link,
 #crm-contact-actions-link,
