CRM-5941 - fixes to buttons

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2107,6 +2107,7 @@ div.grippie {
 
 #crm-container .crm-submit-buttons,
 #crm-container .action-link {
+    height:27px;
     margin: 4px 0px 4px 2px;
 }
 
