--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2242,6 +2242,8 @@ span.icon {
 	display:inline-block;
 	}
 
+#crm-contact-actions-link .icon,
+#crm-create-new-link .icon,
 .button .icon,
 .crm-button .icon {background-image:url("../i/icons/jquery-ui-FFFFFF.png");}
 .button:hover .icon,
@@ -2279,6 +2281,8 @@ span.icon {
 .user-record-icon { background-position:-145px -98px; }
 
 .inform-icon { background-position: -16px -144px; }
+
+.dropdown-icon { background-position:-46px -32px; float:right;}
 
 .tip-icon { background-position: -128px -128px; }
 
