--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2239,7 +2239,9 @@ div.grippie {
     width:16px;
     background:transparent url("../i/icons/jquery-ui-52534D.png") no-repeat top right;
     float:left;
+    text-indent: -10000px;
 }
+
 span.icon {
 	float:none;
 	display:inline-block;
