CRM-6199 - fix to navigation menu style

--- a/packages/jquery/css/menu.css
+++ b/packages/jquery/css/menu.css
@@ -71,6 +71,7 @@ html>body .innerbox
     z-index:9000;
     font-size: 12px;
     font-family: Tahoma, Verdana, Arial, Sans;
+    overflow: hidden;
 }
 
 li.menu-separator.active{
