--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -2252,6 +2252,7 @@ div.grippie {
     float:left;
     }
 #crm-contact-actions-list .crm-contact_print-list { 
+    border-left: 1px solid #a7a7a7;
     float:right;
     }
 #crm-contact-actions-list .crm-contact_actions-list { 
